# ducter-server

./: README.md
agent/: Makefile.am  Makefile.in  dcmd_agent_app.cc  dcmd_agent_config.h  dcmd_agent_def.cc
center/: Makefile.am  Makefile.in  configure  dcmd_center_agent_mgr.cc  dcmd_center_config.cc  dcmd_center_config.h  dcmd_center_def.cc  dcmd_center_h4_admin.h  dcmd_center_h4_agent_opr.h  dcmd_center_h4_check.h  dcmd_center_opr_cache.h  dcmd_center_run_subtask_task.h  dcmd_center_subtask_output_task.h  dcmd_center_task_mgr.h  dcmd_center_watch_mgr.cc  dcmd_center_watch_mgr.h  dcmd_mysql.cc
center/autom4te.cache/: requests  traces.0
center/script/opr_script/: dcmd_opr_proc_info.script  dcmd_opr_test_opr_env.script
cmn/: dcmd_agent.pb.cc  dcmd_cmn.pb.cc  dcmd_def.cc  dcmd_def.h  dcmd_tss.cc
doc/: Ducter任务与操作脚本编写及使用指南.docx  Ducter安装手册.docx
ducter/doc/: Ducter介绍.pptx  ducter design.doc  ducter design.vsd
ducter/server/tags/v1.2.0/agent/: dcmd_agent.cc  dcmd_agent_app.h  dcmd_agent_config.cc  dcmd_process.cc  dcmd_process.h
ducter/server/tags/v1.2.0/center/: AUTHORS  INSTALL  dcmd_center.cc  dcmd_center_app.h  dcmd_center_h4_admin.cc  dcmd_center_h4_agent_task.h  dcmd_center_opr_task.cc  dcmd_center_run_opr_task.h  dcmd_center_run_subtask_task.cc  dcmd_center_subtask_output_task.cc  dcmd_center_task_mgr.cc  dcmd_xml_parse.h
ducter/server/tags/v1.2.0/center/autom4te.cache/: output.0
ducter/server/tags/v1.2.0/cmn/: dcmd_cmn.pb.h  dcmd_macro.h  dcmd_tss.h  dcmd_ui.pb.cc
ducter/server/tags/v1.2.0/doc/: Ducter安装手册.docx  ducter design.doc  ducter design.vsd
ducter/server/tags/v1.2.0/interface/: dcmd.sql  dcmd_ui.proto
ducter/server/tags/v1.2.0/tool/: Makefile.am  Makefile.in  ax_cxx_compile_stdcxx_0x.m4  configure  dcmd_exec_dup_opr.cc  dcmd_invalid_agent.cc  dcmd_opr_script.cc  dcmd_running_subtask.cc  dcmd_script_list.cc  dcmd_subtask_output.cc  dcmd_subtask_process.cc  dcmd_task_cmd.cc
ducter/server/trunk/dcmd/agent/: Makefile.am  Makefile.in  configure  configure.in  dcmd_agent.conf  dcmd_agent_app.cc  dcmd_agent_app.h  dcmd_agent_def.h
ducter/server/trunk/dcmd/center/: Makefile.am  Makefile.in  configure  configure.in  dcmd_center.conf  dcmd_center_agent_mgr.h  dcmd_center_app.cc  dcmd_center_app.h  dcmd_center_def.h  dcmd_center_h4_agent_opr.cc  dcmd_center_h4_agent_task.cc  dcmd_center_h4_check.cc  dcmd_center_opr_cache.cc  dcmd_center_opr_task.h  dcmd_center_run_opr_task.cc  dcmd_center_task_mgr.inl  dcmd_mysql.h  dcmd_xml_parse.cc
ducter/server/trunk/dcmd/center/autom4te.cache/: output.0  requests  traces.0
ducter/server/trunk/dcmd/cmn/: dcmd_agent.pb.h  dcmd_ui.pb.h
ducter/server/trunk/dcmd/interface/: dcmd.sql  dcmd_agent.proto  dcmd_cmn.proto
ducter/server/trunk/dcmd/script/opr/: dcmd_opr_proc_info.script  dcmd_opr_ps.script
ducter/server/trunk/dcmd/script/task/: dcmd_task_install_by_svn.script  dcmd_task_test_process.script  dcmd_task_test_task_env.script
ducter/server/trunk/dcmd/tool/: dcmd_agent_info.cc  dcmd_exec_opr.cc  dcmd_script.cc  dcmd_task_script.cc
ducter/web/trunk/basic/common/: CwxDef.class.php  CwxMsgHead.class.php  CwxPackage.class.php  CwxRequest.class.php  ProtobufMessage.php.bk  dcmd_cmn.proto  dcmd_ui.proto  dcmd_util_func.php  interface.php  pb_proto_dcmd_cmn.php  pb_proto_dcmd_ui.php
ducter/web/trunk/basic/config/: db.php  params.php  web.php
ducter/web/trunk/basic/controllers/: DcmdAppController.php  DcmdCenterController.php  DcmdCommandController.php  DcmdDepartmentController.php  DcmdGroupCmdController.php  DcmdGroupController.php  DcmdGroupRepeatCmdController.php  DcmdInvalidAgentController.php  DcmdNodeController.php  DcmdNodeGroupController.php  DcmdOprCmdController.php  DcmdOprCmdRepeatExecController.php  DcmdOprLogController.php  DcmdServiceController.php  DcmdServicePoolController.php  DcmdServicePoolNodeController.php  DcmdSoftpkgController.php  DcmdTaskAsyncController.php  DcmdTaskCmdArgController.php  DcmdTaskCmdController.php  DcmdTaskController.php  DcmdTaskHistoryController.php  DcmdTaskNodeController.php  DcmdTaskNodeHistoryController.php  DcmdTaskServicePoolController.php  DcmdTaskServicePoolHistoryController.php  DcmdTaskTemplateController.php  DcmdTaskTemplateServicePoolController.php  DcmdUserController.php  DcmdUserGroupController.php  SiteController.php
ducter/web/trunk/basic/models/: DcmdApp.php  DcmdAppSearch.php  DcmdCenter.php  DcmdCenterSearch.php  DcmdCmdArg.php  DcmdCommand.php  DcmdCommandHistory.php  DcmdCommandSearch.php  DcmdDepartment.php  DcmdDepartmentSearch.php  DcmdGroup.php  DcmdGroupCmd.php  DcmdGroupCmdSearch.php  DcmdGroupRepeatCmd.php  DcmdGroupRepeatCmdSearch.php  DcmdGroupSearch.php  DcmdNode.php  DcmdNodeGroup.php  DcmdNodeGroupSearch.php  DcmdNodeSearch.php  DcmdOprCmd.php  DcmdOprCmdArg.php  DcmdOprCmdRepeatExec.php  DcmdOprCmdRepeatExecSearch.php  DcmdOprCmdSearch.php  DcmdOprLog.php  DcmdOprLogSearch.php  DcmdService.php  DcmdServicePool.php  DcmdServicePoolNode.php  DcmdServicePoolNodeSearch.php  DcmdServicePoolSearch.php  DcmdServiceSearch.php  DcmdSoftpkg.php  DcmdSoftpkgSearch.php  DcmdTask.php  DcmdTaskCmd.php  DcmdTaskCmdArg.php  DcmdTaskCmdArgSearch.php  DcmdTaskCmdSearch.php  (+21 more)
ducter/web/trunk/basic/runtime/debug/: index.data
ducter/web/trunk/basic/runtime/gii-2.0.0/: yii-gii-generators-crud-Generator.json  yii-gii-generators-model-Generator.json
ducter/web/trunk/basic/views/dcmd-app/: _form.php  _search.php  create.php  index.php  update.php  view.php
ducter/web/trunk/basic/views/dcmd-center/: _form.php  _search.php  create.php  index.php  update.php  view.php
ducter/web/trunk/basic/views/dcmd-command/: _form.php  _search.php  create.php  index.php  update.php  view.php
ducter/web/trunk/basic/views/dcmd-department/: _form.php  _search.php  create.php  index.php  update.php  view.php
ducter/web/trunk/basic/views/dcmd-group-cmd/: _form.php  _search.php  create.php  index.php  update.php  view.php
ducter/web/trunk/basic/web/: index.php
interface/: dcmd.sql
tool/: config.status  dcmd_running_opr.cc  libtool
(+163 files in other folders)
